# rust-chat

./: .gitignore  Cargo.toml  cliff.toml  deny.toml  package.json
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  test.http
chat_server/fixtures/: decoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  chat.yml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20241118080240_initial.sql  20241121062029_workspace.sql  20241128030626_triggers.sql  20241128031633_initdata.sql  20241129030626_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
