[package]
name = "chat"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
