[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
jwt-simple = "0.12.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "runtime-tokio-rustls",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "fs",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
