[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
axum-extra = { workspace = true }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
