[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = ["sqlx-db-tester", "http-body-util"]


[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { workspace = true }
chat-core = { workspace = true }
hex = "0.4.3"
http-body-util = { version = "0.1.2", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
jwt-simple = { workspace = true }
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.133"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.3"


[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
