[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3.31"

[dev-dependencies]
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
    "stream",
] }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.133"
reqwest-eventsource = "0.6.0"
