[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chat-core = { workspace = true }
dashmap = "6.1.0"
futures = "0.3.31"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.133"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
